Add port support - Add port support for CLI - Add unit test cases